# ipmifan

./: CMakeLists.txt  ipmi.cpp  ipmi.h  ipmifan.service  lm.cpp  lm.h  main.cpp  pwmfan.cpp  pwmfan.h  sensor.h
